crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__bound_mkcons.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let xs#1 : list int = mkCons (trace "head" in 21) (con (list integer) [7]) in
let alias#2 : list int = xs#1 in
let alias2#3 : list int = alias#2 in
mkCons (addInteger (case@List alias2#3 of
  Cons head#4 tail#5 -> head#4) (case@List alias2#3 of
  Cons head#6 tail#7 -> head#6)) xs#1
--- unoptimized UPLC
(program 1.1.0
  [(lam xs_1
    [(lam alias_2
      [(lam alias2_3
        [[(force (builtin mkCons))
          [[(builtin addInteger) (case alias2_3 (lam head_4 (lam tail_5 head_4)) (error))]
            (case alias2_3 (lam head_6 (lam tail_7 head_6)) (error))]]
          xs_1])
        alias_2])
      xs_1])
    [[(force (builtin mkCons))
      (force [[(force (builtin trace)) (con string "head")] (delay (con integer 21))])]
      (con (list integer) [7])]])
--- optimized Core
let anf#15 : int = trace "head" in 21 in
let xs#8 : list int = mkCons anf#15 (con (list integer) [7]) in
let anf#18 : int = addInteger anf#15 anf#15 in
mkCons anf#18 xs#8
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam builtin_5
      [(lam anf_1
        [(lam xs_2
          [(lam anf_3 [[builtin_4 anf_3] xs_2]) [[(builtin addInteger) anf_1] anf_1]])
          [[builtin_4 anf_1] (con (list integer) [7])]])
        (force [[builtin_5 (con string "head")] (delay (con integer 21))])])
      (force (builtin trace))])
    (force (builtin mkCons))])
--- isolated pass
--- isolated ANF input
let anf#8 : int = trace "head" in 21 in
let xs#1 : list int = mkCons anf#8 (con (list integer) [7]) in
let alias#2 : list int = xs#1 in
let alias2#3 : list int = alias#2 in
let anf#9 : int = case@List alias2#3 of
  Cons head#4 tail#5 -> head#4 in
let anf#10 : int = case@List alias2#3 of
  Cons head#6 tail#7 -> head#6 in
let anf#11 : int = addInteger anf#9 anf#10 in
mkCons anf#11 xs#1
--- isolated folded Core
let anf#8 : int = trace "head" in 21 in
let list_field#12 : list int = (con (list integer) [7]) in
let xs#1 : list int = mkCons anf#8 list_field#12 in
let alias#2 : list int = xs#1 in
let alias2#3 : list int = alias#2 in
let anf#9 : int = let head#4 : int = anf#8 in
let tail#5 : list int = list_field#12 in
head#4 in
let anf#10 : int = let head#6 : int = anf#8 in
let tail#7 : list int = list_field#12 in
head#6 in
let anf#11 : int = addInteger anf#9 anf#10 in
mkCons anf#11 xs#1
--- isolated cleaned Core
let anf#8 : int = trace "head" in 21 in
let xs#1 : list int = mkCons anf#8 (con (list integer) [7]) in
let anf#11 : int = addInteger anf#8 anf#8 in
mkCons anf#11 xs#1
--- isolated UPLC before
(program 1.1.0
  [(lam anf_8
    [(lam xs_1
      [(lam alias_2
        [(lam alias2_3
          [(lam anf_9
            [(lam anf_10
              [(lam anf_11 [[(force (builtin mkCons)) anf_11] xs_1])
                [[(builtin addInteger) anf_9] anf_10]])
              (case alias2_3 (lam head_6 (lam tail_7 head_6)) (error))])
            (case alias2_3 (lam head_4 (lam tail_5 head_4)) (error))])
          alias_2])
        xs_1])
      [[(force (builtin mkCons)) anf_8] (con (list integer) [7])]])
    (force [[(force (builtin trace)) (con string "head")] (delay (con integer 21))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_8
    [(lam xs_1
      [(lam anf_11 [[(force (builtin mkCons)) anf_11] xs_1])
        [[(builtin addInteger) anf_8] anf_8]])
      [[(force (builtin mkCons)) anf_8] (con (list integer) [7])]])
    (force [[(force (builtin trace)) (con string "head")] (delay (con integer 21))])])
--- result
(con (list integer) [42, 21, 7])
--- logs
["head"]
