crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__cons_default.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List (con (list integer) [42]) of
  _ -> trace "fallback" in 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (con (list integer) [42])
    (lam generated_2
      (lam generated_1
        (force
          [[(force (builtin trace)) (con string "fallback")] (delay (con integer 42))])))
    (force
      [[(force (builtin trace)) (con string "fallback")] (delay (con integer 42))])))
--- optimized Core
trace "fallback" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "fallback")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@List (con (list integer) [42]) of
  _ -> trace "fallback" in 42
--- isolated folded Core
trace "fallback" in 42
--- isolated cleaned Core
trace "fallback" in 42
--- isolated UPLC before
(program 1.1.0
  (case
    (con (list integer) [42])
    (lam generated_2
      (lam generated_1
        (force
          [[(force (builtin trace)) (con string "fallback")] (delay (con integer 42))])))
    (force
      [[(force (builtin trace)) (con string "fallback")] (delay (con integer 42))])))
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "fallback")] (delay (con integer 42))]))
--- result
(con integer 42)
--- logs
["fallback"]
